# sci-skills

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  install.sh  pyproject.toml  uninstall.sh
docs/: findings-xps.md
docs/superpowers/: glossary.md
sci-skills-analysis/.claude-plugin/: plugin.json
sci-skills-analysis/skills/xps/: .gitignore  SKILL.md
sci-skills-article/.claude-plugin/: plugin.json
sci-skills-article/skills/sci-export/: SKILL.md
sci-skills-article/skills/sci-story/: SKILL.md
sci-skills-article/skills/sci-submit/: README.md  SKILL.md
sci-skills-article/skills/sci-write/: SKILL.md
sci-skills/.claude-plugin/: plugin.json
sci-skills/skills/article-init/: SKILL.md
sci-skills/skills/sci-draw/: SKILL.md  requirements.txt
skills/sci-draw/: README.md  SKILL.md
skills/sci-draw/references/: design-theory.md  figure-contract.md  tutorials.md  visual_review.md  viz_pitfalls.md
skills/sci-draw/scripts/: check_env.py  layout_tools.py  profile_data.py
skills/sci-export/: SKILL.md
skills/sci-polish/: SKILL.md
skills/sci-polish/references/: style-guardrails.md
skills/sci-skills-init/: SKILL.md
skills/sci-skills-init/references/: family-layout.md
skills/sci-skills-init/scripts/: init_project.py
skills/sci-skills-init/tests/: README.md
skills/sci-story/: SKILL.md
skills/sci-submit/: README.md  README_zh.md  SKILL.md
skills/sci-write/: SKILL.md
templates/cover_letter/: compile.sh  cover_letter.aux  cover_letter.bib  cover_letter.out  cover_letter.tex
templates/main/: .gitignore  Makefile  cross_refs.json
(+204 files in other folders)
